.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:07:47 **** Incremental Build of configuration Debug for project MCU_Lab2 ****
make -j8 all 
arm-none-eabi-size   MCU_Lab2.elf 
   text	   data	    bss	    dec	    hex	filename
   7544	     48	   1680	   9272	   2438	MCU_Lab2.elf
Finished building: default.size.stdout
 
22:09:07 **** Incremental Build of configuration Debug for project MCU_Lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'updateClockBuffer':
../Core/Src/main.c:138:16: error: 'hour' undeclared (first use in this function)
  138 |  led_buffer[0]=hour/10;
      |                ^~~~
../Core/Src/main.c:138:16: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:140:16: error: 'minute' undeclared (first use in this function)
  140 |  led_buffer[2]=minute/10;
      |                ^~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
22:09:59 **** Incremental Build of configuration Debug for project MCU_Lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "MCU_Lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Hoai Thanh\Documents\VXK-VDK\MCU_Lab2\MCU_Lab2\STM32F103C6UX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MCU_Lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MCU_Lab2.elf
 
arm-none-eabi-size   MCU_Lab2.elf 
arm-none-eabi-objdump -h -S  MCU_Lab2.elf  > "MCU_Lab2.list"
   text	   data	    bss	    dec	    hex	filename
   7544	     48	   1680	   9272	   2438	MCU_Lab2.elf
arm-none-eabi-objcopy  -O ihex  MCU_Lab2.elf  "MCU_Lab2.hex"
Finished building: default.size.stdout
arm-none-eabi-objcopy  -O binary  MCU_Lab2.elf  "MCU_Lab2.bin"
 
Finished building: MCU_Lab2.hex
Finished building: MCU_Lab2.list
Finished building: MCU_Lab2.bin
 
 
 
22:35:45 **** Incremental Build of configuration Debug for project MCU_Lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "MCU_Lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Hoai Thanh\Documents\VXK-VDK\MCU_Lab2\MCU_Lab2\STM32F103C6UX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MCU_Lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MCU_Lab2.elf
 
arm-none-eabi-size   MCU_Lab2.elf 
arm-none-eabi-objdump -h -S  MCU_Lab2.elf  > "MCU_Lab2.list"
   text	   data	    bss	    dec	    hex	filename
   8676	     48	   1688	  10412	   28ac	MCU_Lab2.elf
arm-none-eabi-objcopy  -O ihex  MCU_Lab2.elf  "MCU_Lab2.hex"
Finished building: default.size.stdout
arm-none-eabi-objcopy  -O binary  MCU_Lab2.elf  "MCU_Lab2.bin"
 
Finished building: MCU_Lab2.list
Finished building: MCU_Lab2.hex
 
Finished building: MCU_Lab2.bin
 
 
22:36:40 **** Incremental Build of configuration Debug for project MCU_Lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "MCU_Lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Hoai Thanh\Documents\VXK-VDK\MCU_Lab2\MCU_Lab2\STM32F103C6UX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MCU_Lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MCU_Lab2.elf
 
arm-none-eabi-size   MCU_Lab2.elf 
arm-none-eabi-objdump -h -S  MCU_Lab2.elf  > "MCU_Lab2.list"
   text	   data	    bss	    dec	    hex	filename
   8660	     48	   1688	  10396	   289c	MCU_Lab2.elf
arm-none-eabi-objcopy  -O ihex  MCU_Lab2.elf  "MCU_Lab2.hex"
Finished building: default.size.stdout
arm-none-eabi-objcopy  -O binary  MCU_Lab2.elf  "MCU_Lab2.bin"
 
Finished building: MCU_Lab2.list
Finished building: MCU_Lab2.hex
 
Finished building: MCU_Lab2.bin
 
 
22:47:34 **** Incremental Build of configuration Debug for project MCU_Lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "MCU_Lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Hoai Thanh\Documents\VXK-VDK\MCU_Lab2\MCU_Lab2\STM32F103C6UX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MCU_Lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MCU_Lab2.elf
 
arm-none-eabi-size   MCU_Lab2.elf 
arm-none-eabi-objdump -h -S  MCU_Lab2.elf  > "MCU_Lab2.list"
   text	   data	    bss	    dec	    hex	filename
   8660	     48	   1688	  10396	   289c	MCU_Lab2.elf
arm-none-eabi-objcopy  -O ihex  MCU_Lab2.elf  "MCU_Lab2.hex"
Finished building: default.size.stdout
arm-none-eabi-objcopy  -O binary  MCU_Lab2.elf  "MCU_Lab2.bin"
 
Finished building: MCU_Lab2.list
Finished building: MCU_Lab2.hex
 
Finished building: MCU_Lab2.bin
 
 
22:57:39 **** Incremental Build of configuration Debug for project MCU_Lab2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/software_timer.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/software_timer.d" -MT"Core/Src/software_timer.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/software_timer.o"
arm-none-eabi-gcc -o "MCU_Lab2.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Hoai Thanh\Documents\VXK-VDK\MCU_Lab2\MCU_Lab2\STM32F103C6UX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MCU_Lab2.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: MCU_Lab2.elf
 
arm-none-eabi-size   MCU_Lab2.elf 
arm-none-eabi-objdump -h -S  MCU_Lab2.elf  > "MCU_Lab2.list"
   text	   data	    bss	    dec	    hex	filename
   8660	     48	   1688	  10396	   289c	MCU_Lab2.elf
arm-none-eabi-objcopy  -O ihex  MCU_Lab2.elf  "MCU_Lab2.hex"
Finished building: default.size.stdout
arm-none-eabi-objcopy  -O binary  MCU_Lab2.elf  "MCU_Lab2.bin"
 
Finished building: MCU_Lab2.list
Finished building: MCU_Lab2.hex
 
Finished building: MCU_Lab2.bin
 
 
